Fix missing workflow from CAPBM virtualmedia jobs
We were missing the workflow, so post steps weren't being run on these
jobs.

--- a/ci-operator/config/openshift/cluster-api-provider-baremetal/openshift-cluster-api-provider-baremetal-master.yaml
+++ b/ci-operator/config/openshift/cluster-api-provider-baremetal/openshift-cluster-api-provider-baremetal-master.yaml
@@ -94,6 +94,7 @@ tests:
     - ref: ipi-install-rbac
     - ref: baremetalds-devscripts-conf-virtualmedia
     - ref: baremetalds-devscripts-setup
+    workflow: baremetalds-e2e
 - as: gofmt
   commands: make fmt
   container:
