--- a/ci-operator/config/openshift/cluster-api-provider-baremetal/openshift-cluster-api-provider-baremetal-release-4.7.yaml
+++ b/ci-operator/config/openshift/cluster-api-provider-baremetal/openshift-cluster-api-provider-baremetal-release-4.7.yaml
@@ -95,6 +95,7 @@ tests:
     - ref: ipi-install-rbac
     - ref: baremetalds-devscripts-conf-virtualmedia
     - ref: baremetalds-devscripts-setup
+    workflow: baremetalds-e2e
 - as: gofmt
   commands: make fmt
   container:
