origin: add metal tests without any skipped tests
This adds 3 jobs to origin for metal ipi IPv4, IPv6, and dualstack
that do not skip any tests. This allows us to test fixes, as well as
begin work to moving some skips to code in origin.

--- a/ci-operator/config/openshift/origin/openshift-origin-master.yaml
+++ b/ci-operator/config/openshift/origin/openshift-origin-master.yaml
@@ -216,6 +216,33 @@ tests:
         IP_STACK=v4v6
         NETWORK_TYPE=OVNKubernetes
     workflow: baremetalds-e2e
+- as: e2e-metal-ipi-all
+  steps:
+    cluster_profile: packet
+    env:
+      TEST_SKIPS: ""
+      DEVSCRIPTS_CONFIG: |
+        IP_STACK=v4
+        NETWORK_TYPE=OpenShiftSDN
+    workflow: baremetalds-e2e
+- as: e2e-metal-ipi-ovn-ipv6-all
+  steps:
+    cluster_profile: packet
+    env:
+      TEST_SKIPS: ""
+      DEVSCRIPTS_CONFIG: |
+        IP_STACK=v6
+        NETWORK_TYPE=OVNKubernetes
+    workflow: baremetalds-e2e
+- as: e2e-metal-ipi-ovn-dualstack-all
+  steps:
+    cluster_profile: packet
+    env:
+      TEST_SKIPS: ""
+      DEVSCRIPTS_CONFIG: |
+        IP_STACK=v4v6
+        NETWORK_TYPE=OVNKubernetes
+    workflow: baremetalds-e2e
 - as: e2e-metal-ipi-virtualmedia
   steps:
     cluster_profile: packet
